fix css issue and split scrollbar styles

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -3,9 +3,9 @@
   border-radius: 30px;
   border-width: 0;
   color: var(--color-white);
-  padding: 0.5em 2em;
-  font-weight: 700;
+  font-weight: bold;
   letter-spacing: 0.125em;
+  padding: 0.5em 2em;
   text-transform: uppercase;
   text-align: center;
   transition: background-color 0.3s, border-color 0.3s;
@@ -39,6 +39,6 @@
 
 .quiet:hover,
 .quiet:focus {
-  border-color: var(--color-white);
   background-color: rgba(0, 0, 0, 0);
+  border-color: var(--color-white);
 }
