--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,7 +58,6 @@ p {
 
 h1, h2, h3, h4 {
   margin: 2rem 0 1.38rem;
-  font-family: 'Helvetica Neue', sans-serif;
   font-weight: 400;
   line-height: 1.3;
 }
@@ -109,21 +108,4 @@ img {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: var(--color-light-grey);
-  border: 4px solid transparent;
-  border-radius: 16px;
-  background-clip: padding-box;
-  min-height: 1.875rem;
-}
-
-::-webkit-scrollbar {
-  width: 1rem;
-}
-
-::-webkit-scrollbar-track {
-  background-color: var(--color-dark-grey);
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
